# Arkanoid

./: .clang-format  .gitignore  CMakeLists.txt  bblock.cpp  bblock.h  blocks.cpp  blocks.h  build.sh  build_release.sh  build_run.sh  image.cpp  image.h  main.cpp  run.sh  shar.cpp  shar.h  пояснительная записка.docx  приложение.docx
headers/: BlackHole.h  Clock.h  EventManager.h  FrontendManager.h  GLInterop.h  GLRenderer.h  Game.h  PlayerDatabase.h  ProceduralTextures.h  ResolutionPresets.h  Starfield.h  TextRenderer.h  Types.h  UILayout.h  ball.h  bblock.h  blocks.h  bricks.h  image.h  paddel.h  shar.h  utils.h
sdl2/: FindSDL2.cmake
snacks/: players.txt
src/: BlackHole.cpp  Clock.cpp  EventManager.cpp  FrontendManager.cpp  GLInterop.cpp  GLRenderer.cpp  Game.cpp  PlayerDatabase.cpp  ProceduralTextures.cpp  Starfield.cpp  TextRenderer.cpp  ball.cpp  bblock.cpp  blocks.cpp  bricks.cpp  image.cpp  main.cpp  paddel.cpp  shar.cpp  stb_impl.cpp
